--- a/.env.example
+++ b/.env.example
@@ -8,16 +8,13 @@
 # https://www.prisma.io/blog/nestjs-prisma-rest-api-7D056s1BmOL0#create-a-postgresql-instance
 
 
-# DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_USER=myuser
+DATABASE_PASSWORD=mypassword
+DATABASE_NAME=pay-db
+SCHEMA_NAME=auth-pay-db
+CONNECTION_LIMIT=5
+POOL_TIMEOUT=5
 
-
-# DATABASE_HOST=localhost
-# DATABASE_PORT=5432
-# DATABASE_USER=myuser
-# DATABASE_PASSWORD=mypassword
-# DATABASE_NAME=energyDB
-# SCHEMA_NAME=api-energy-db
-# CONNECTION_LIMIT=5
-# POOL_TIMEOUT=2
-
-# DATABASE_URL="postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?connection_limit=${CONNECTION_LIMIT}&pool_timeout=${POOL_TIMEOUT}&schema=${SCHEMA_NAME}"
+DATABASE_URL="postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?connection_limit=${CONNECTION_LIMIT}&pool_timeout=${POOL_TIMEOUT}&schema=${SCHEMA_NAME}"
