--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "aero-busca-api",
+  "name": "pay-api",
   "version": "0.0.1",
-  "description": "API para o projeto Aero Busca",
+  "description": "API para o projeto pay",
   "author": "index_sm",
   "private": true,
   "license": "MIT",
@@ -35,10 +35,12 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "decimal.js": "^10.4.3",
     "dotenv": "^16.4.5",
     "node-cache": "^5.1.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pay-api": "file:",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "swagger-themes": "^1.4.3",
