--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,7 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+# RUN DOCKER FILE
+POSTGRES_USER=prisma
+POSTGRES_PASSWORD=topsecret
+POSTGRES_DB=food
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-# DOCKER / NEST / PRISMA TUTORIAL 
-# https://www.prisma.io/blog/nestjs-prisma-rest-api-7D056s1BmOL0#create-a-postgresql-instance
-
-
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_USER=myuser
-DATABASE_PASSWORD=mypassword
-DATABASE_NAME=pay-db
-SCHEMA_NAME=auth-pay-db
-CONNECTION_LIMIT=5
-POOL_TIMEOUT=5
-
-DATABASE_URL="postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?connection_limit=${CONNECTION_LIMIT}&pool_timeout=${POOL_TIMEOUT}&schema=${SCHEMA_NAME}"
+# nest run in docker container
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgresprisma:5432/${POSTGRES_DB}?schema=food&sslmode=prefer
