--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prisma": "npx prisma migrate dev --name 'init'"
+    "prisma": "npx prisma migrate dev --name 'init'",
+    "prisma:seed": "ts-node prisma/seed.ts",
+    "start:docker": "docker-compose up -d"
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.2",
@@ -32,7 +34,7 @@
     "@prisma/client": "^5.13.0",
     "aero-busca-api": "file:",
     "axios": "^1.6.7",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "decimal.js": "^10.4.3",
@@ -51,6 +53,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
